syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

message IncomeIdRequest {
    int32 IncomeId = 1;
}