syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "Messages/Obligation.proto";

message GetObligationListRequest {
    int32 CustomerOnSAId = 1;
}

message GetObligationListResponse {
    repeated Obligation Obligations = 1;
}